# Chess

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile
src/: coordination.cpp  coordination.hpp  factorial.hpp  main.cpp  tile.cpp  tile.hpp  tilecolor.cpp  tilecolor.hpp
test/: CMakeLists.txt  test.cpp
